finalizado pagina de times para computador

--- a/times.html
+++ b/times.html
@@ -25,52 +25,52 @@
         <h1>Histôria dos Times</h1>
         <div>
             <img src="imagens/Kings League Brazil_files/T-furia.png" alt="furia">
-            <p>Presidido por Cris Guedes e Neymar Jr., a FURIA FC é um dos poucos clubes brasileiros que têm experiência em Kings League e segue com os principais nomes da entidade, como os wildcards Jeffinho, Lipão e Leleti e a comissão técnica comandada por Dudu Oliveira.</p>
+            <p>Presidido por <strong>Cris Guedes</strong> e <strong>Neymar Jr</strong>, a <strong>FURIA FC</strong> é um dos poucos clubes brasileiros que têm experiência em Kings League e segue com os principais nomes da entidade, como os wildcards <strong>Jeffinho</strong>, <strong>Lipão</strong> e <strong>Leleti</strong> e a comissão técnica comandada por Dudu Oliveira.</p>
         </div>
 
-        <div>
+       <div>
             <img src="imagens/Kings League Brazil_files/T-g3x.png" alt="g3x">
-            <p>Presidido por Alexandre Gaules e Kelvin Oliveira, o G3X FC é um dos poucos clubes brasileiros que têm experiência em Kings League e segue com os principais nomes da entidade, como os wildcards Andreas e K9 e a comissão técnica formada por VelhoVamp e Ale Apoka.</p>
+            <p>Presidido por <strong>Alexandre Gaules</strong> e <strong>Kelvin Oliveira</strong>, o <strong>G3X FC</strong> é um dos poucos clubes brasileiros que têm experiência em Kings League e segue com os principais nomes da entidade, como os wildcards <strong>Andreas</strong> e <strong>K9</strong> e a comissão técnica formada por VelhoVamp e Ale Apoka.</p>
         </div>
 
         <div>
             <img src="imagens/Kings League Brazil_files/T-capim.png" alt="capim">
-            <p>Comandado fora das quatro linhas por JonVlogs e Luva de Pedreiro, o Capim é um dos clubes criados para a estreia da Kings League no Brasil, mas que já conta com nomes com experiência na modalidade, como o goleiro Barata e o defensor Maicon.</p>
+            <p>Comandado fora das quatro linhas por <strong>JonVlogs</strong> e <strong>Luva de Pedreiro</strong>, o <strong>Capim</strong> é um dos clubes criados para a estreia da Kings League no Brasil, mas que já conta com nomes com experiência na modalidade, como o goleiro <strong>Barata</strong> e o defensor <strong>Maicon</strong>.</p>
         </div>
 
         <div>
             <img src="imagens/Kings League Brazil_files/T-dendele.png" alt="dendele">
-            <p>Comandado fora das quatro linhas por Luquet4 e Paulinho o Loko, o Dendele é um dos times convidados para a estreia da Kings League no Brasil e já está preparado para o início da categoria e conta com atletas como: Lyncoln, Lucas Hector, Canhoto e Kaká que são os grandes nomes do clube.</p>
+            <p>Comandado fora das quatro linhas por <strong>Luquet4</strong> e <strong>Paulinho o Loko</strong>, o <strong>Dendele</strong> é um dos times convidados para a estreia da Kings League no Brasil e já está preparado para o início da categoria e conta com atletas como: <strong>Lyncoln</strong>, <strong>Lucas Hector</strong>, <strong>Canhoto</strong> e <strong>Kaká</strong> que são os grandes nomes do clube.</p>
         </div>
 
         <div>
             <img src="imagens/Kings League Brazil_files/T-desimpedidos-goti.png" alt="desimpedidos goti">
-            <p>Comandado fora das quatro linhas por Toguro e Yuri22, o Desimpedidos Goti é um dos times convidados para a estreia da Kings League no Brasil e já conta com atletas experientes na modalidade, como João Pedro – campeão mundial com a seleção brasileira – e Thor, vice-campeão mundial de clubes da categoria</p>
+            <p>Comandado fora das quatro linhas por <strong>Toguro</strong> e <strong>Yuri22</strong>, o <strong>Desimpedidos Goti</strong> é um dos times convidados para a estreia da Kings League no Brasil e já conta com atletas experientes na modalidade, como <strong>João Pedro</strong> – campeão mundial com a seleção brasileira – e <strong>Thor</strong>, vice-campeão mundial de clubes da categoria</p>
         </div>
 
         <div>
             <img src="imagens/Kings League Brazil_files/T-fluxo.png" alt="fluxo">
-            <p>Comandado fora das quatro linhas por Cerol e Nobru, o Fluxo é um dos times de e-sports convidado a entrar no fut7 para a estreia da Kings League no Brasil, e já conta com um atleta experiente na modalidade – o atacante VB.</p>
+            <p>Comandado fora das quatro linhas por <strong>Cerol</strong> e <strong>Nobru</strong>, o <strong>Fluxo</strong> é um dos times de e-sports convidado a entrar no fut7 para a estreia da Kings League no Brasil, e já conta com um atleta experiente na modalidade – o atacante <strong>VB</strong>.</p>
         </div>
 
         <div>
             <img src="imagens/Kings League Brazil_files/T-funkfbol.png" alt="funkbol">
-            <p>Comandado fora das quatro linhas por Kond, MC Hariel e Michel Elias, o Funkbol Clube é um dos times criados para a estreia da Kings League no Brasil, e já conta com um atleta experiente na modalidade – o atacante Pepinho.</p>
+            <p>Comandado fora das quatro linhas por Kond, <strong>MC Hariel</strong> e <strong>Michel Elias</strong>, o <strong>Funkbol Clube</strong> é um dos times criados para a estreia da Kings League no Brasil, e já conta com um atleta experiente na modalidade – o atacante <strong>Pepinho</strong>.</p>
         </div>
 
         <div>
             <img src="imagens/Kings League Brazil_files/T-loud.png" alt="loud">
-            <p>Comandado fora das quatro linhas por Coringa, o Loud SC é um dos times criados para a estreia da Kings League no Brasil, e já conta com um atleta experiente na modalidade – o goleiro Gabriel Kawakami.</p>
+            <p>Comandado fora das quatro linhas por <strong>Coringa</strong>, o <strong>Loud SC</strong> é um dos times criados para a estreia da Kings League no Brasil, e já conta com um atleta experiente na modalidade – o goleiro <strong>Gabriel Kawakami</strong>.</p>
         </div>
 
         <div>
             <img src="imagens/Kings League Brazil_files/T-nyvelados.png" alt="nyvelados">
-            <p>Comandado fora das quatro linhas por Nyvi Estephan e Bruno Soares, o Nyvelados é um dos times criados para a estreia da Kings League no Brasil, e já conta com nomes com experiência na modalidade, como o meia Gustavo Simon e os atacantes Choco e Caio Japa.</p>
+            <p>Comandado fora das quatro linhas por <strong>Nyvi Estephan</strong> e <strong>Bruno Soares</strong>, o <strong>Nyvelados</strong> é um dos times criados para a estreia da Kings League no Brasil, e já conta com nomes com experiência na modalidade, como o meia <strong>Gustavo Simon</strong> e os atacantes <strong>Choco</strong> e <strong>Caio Japa</strong>.</p>
         </div>
 
-        <div>
+        <div id="ultimaImg">
             <img src="imagens/Kings League Brazil_files/T-real-elite.png" alt="real elite">
-            <p>Comandado fora das quatro linhas por Ludmilla e Allan Stag, o FC Real Elite é um dos clubes que nasceu para a estreia da Kings League no Brasil, mas que já conta com nomes com experiência na modalidade, como os wildcards Davi e Well.</p>
+            <p>Comandado fora das quatro linhas por <strong>Ludmilla</strong> e <strong>Allan Stag</strong>, o <strong>FC Real Elite</strong> é um dos clubes que nasceu para a estreia da Kings League no Brasil, mas que já conta com nomes com experiência na modalidade, como os wildcards <strong>Davi</strong> e <strong>Well</strong>.</p>
         </div>
     </main>
     <hr>
