pagina times finalizada para celular - teste

--- a/times.html
+++ b/times.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/times.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="estilos/retrato(times).css" media="screen and (orientation: portrait)">
     <title>Kings League</title>
 </head>
 <body>
@@ -23,53 +24,71 @@
     </nav>
     <main>
         <h1>Histôria dos Times</h1>
-        <div>
-            <img src="imagens/Kings League Brazil_files/T-furia.png" alt="furia">
+        <div class="div2">
+            <img src="imagens/Kings League Brazil_files/T-furia.png" alt="furia" id="simbolo">
             <p>Presidido por <strong>Cris Guedes</strong> e <strong>Neymar Jr</strong>, a <strong>FURIA FC</strong> é um dos poucos clubes brasileiros que têm experiência em Kings League e segue com os principais nomes da entidade, como os wildcards <strong>Jeffinho</strong>, <strong>Lipão</strong> e <strong>Leleti</strong> e a comissão técnica comandada por Dudu Oliveira.</p>
         </div>
 
-       <div>
-            <img src="imagens/Kings League Brazil_files/T-g3x.png" alt="g3x">
+        <hr>
+
+       <div class="div2">
+            <img src="imagens/Kings League Brazil_files/T-g3x.png" alt="g3x" id="simbolo">
             <p>Presidido por <strong>Alexandre Gaules</strong> e <strong>Kelvin Oliveira</strong>, o <strong>G3X FC</strong> é um dos poucos clubes brasileiros que têm experiência em Kings League e segue com os principais nomes da entidade, como os wildcards <strong>Andreas</strong> e <strong>K9</strong> e a comissão técnica formada por VelhoVamp e Ale Apoka.</p>
         </div>
 
-        <div>
-            <img src="imagens/Kings League Brazil_files/T-capim.png" alt="capim">
+        <hr>
+
+        <div class="div2">
+            <img src="imagens/Kings League Brazil_files/T-capim.png" alt="capim" id="simbolo">
             <p>Comandado fora das quatro linhas por <strong>JonVlogs</strong> e <strong>Luva de Pedreiro</strong>, o <strong>Capim</strong> é um dos clubes criados para a estreia da Kings League no Brasil, mas que já conta com nomes com experiência na modalidade, como o goleiro <strong>Barata</strong> e o defensor <strong>Maicon</strong>.</p>
         </div>
 
-        <div>
-            <img src="imagens/Kings League Brazil_files/T-dendele.png" alt="dendele">
+        <hr>
+
+        <div class="div2">
+            <img src="imagens/Kings League Brazil_files/T-dendele.png" alt="dendele" id="simbolo">
             <p>Comandado fora das quatro linhas por <strong>Luquet4</strong> e <strong>Paulinho o Loko</strong>, o <strong>Dendele</strong> é um dos times convidados para a estreia da Kings League no Brasil e já está preparado para o início da categoria e conta com atletas como: <strong>Lyncoln</strong>, <strong>Lucas Hector</strong>, <strong>Canhoto</strong> e <strong>Kaká</strong> que são os grandes nomes do clube.</p>
         </div>
 
-        <div>
-            <img src="imagens/Kings League Brazil_files/T-desimpedidos-goti.png" alt="desimpedidos goti">
+        <hr>
+
+        <div class="div2">
+            <img src="imagens/Kings League Brazil_files/T-desimpedidos-goti.png" alt="desimpedidos goti" id="simbolo">
             <p>Comandado fora das quatro linhas por <strong>Toguro</strong> e <strong>Yuri22</strong>, o <strong>Desimpedidos Goti</strong> é um dos times convidados para a estreia da Kings League no Brasil e já conta com atletas experientes na modalidade, como <strong>João Pedro</strong> – campeão mundial com a seleção brasileira – e <strong>Thor</strong>, vice-campeão mundial de clubes da categoria</p>
         </div>
 
-        <div>
-            <img src="imagens/Kings League Brazil_files/T-fluxo.png" alt="fluxo">
+        <hr>
+
+        <div class="div2">
+            <img src="imagens/Kings League Brazil_files/T-fluxo.png" alt="fluxo" id="simbolo">
             <p>Comandado fora das quatro linhas por <strong>Cerol</strong> e <strong>Nobru</strong>, o <strong>Fluxo</strong> é um dos times de e-sports convidado a entrar no fut7 para a estreia da Kings League no Brasil, e já conta com um atleta experiente na modalidade – o atacante <strong>VB</strong>.</p>
         </div>
 
-        <div>
-            <img src="imagens/Kings League Brazil_files/T-funkfbol.png" alt="funkbol">
+        <hr>
+
+        <div class="div2">
+            <img src="imagens/Kings League Brazil_files/T-funkfbol.png" alt="funkbol" id="simbolo">
             <p>Comandado fora das quatro linhas por Kond, <strong>MC Hariel</strong> e <strong>Michel Elias</strong>, o <strong>Funkbol Clube</strong> é um dos times criados para a estreia da Kings League no Brasil, e já conta com um atleta experiente na modalidade – o atacante <strong>Pepinho</strong>.</p>
         </div>
 
-        <div>
-            <img src="imagens/Kings League Brazil_files/T-loud.png" alt="loud">
+        <hr>
+
+        <div class="div2">
+            <img src="imagens/Kings League Brazil_files/T-loud.png" alt="loud" id="simbolo">
             <p>Comandado fora das quatro linhas por <strong>Coringa</strong>, o <strong>Loud SC</strong> é um dos times criados para a estreia da Kings League no Brasil, e já conta com um atleta experiente na modalidade – o goleiro <strong>Gabriel Kawakami</strong>.</p>
         </div>
 
-        <div>
-            <img src="imagens/Kings League Brazil_files/T-nyvelados.png" alt="nyvelados">
+        <hr>
+
+        <div class="div2">
+            <img src="imagens/Kings League Brazil_files/T-nyvelados.png" alt="nyvelados" id="simbolo">
             <p>Comandado fora das quatro linhas por <strong>Nyvi Estephan</strong> e <strong>Bruno Soares</strong>, o <strong>Nyvelados</strong> é um dos times criados para a estreia da Kings League no Brasil, e já conta com nomes com experiência na modalidade, como o meia <strong>Gustavo Simon</strong> e os atacantes <strong>Choco</strong> e <strong>Caio Japa</strong>.</p>
         </div>
 
-        <div id="ultimaImg">
-            <img src="imagens/Kings League Brazil_files/T-real-elite.png" alt="real elite">
+        <hr>
+
+        <div id="ultimaImg" class="div2">
+            <img src="imagens/Kings League Brazil_files/T-real-elite.png" alt="real elite" id="simbolo">
             <p>Comandado fora das quatro linhas por <strong>Ludmilla</strong> e <strong>Allan Stag</strong>, o <strong>FC Real Elite</strong> é um dos clubes que nasceu para a estreia da Kings League no Brasil, mas que já conta com nomes com experiência na modalidade, como os wildcards <strong>Davi</strong> e <strong>Well</strong>.</p>
         </div>
     </main>
