pagina de noticias finalizado - teste celular

--- a/noticias.html
+++ b/noticias.html
@@ -22,8 +22,59 @@
         <a href="times.html">TIMES</a>
     </nav>
     <main>
+        <section>
 
+            <h1>Principaís Notícias</h1>
+            <h2>Grande Final da Kings League Brazil</h2>
+
+            <p>
+                A disputa pelo título do primeiro split da Kings League Brazil está pegando fogo!
+                Furia FC, G3X FC e Nyvelados são os favoritos para terminar em primeiro lugar. Mas, será que isso significa colocar as mãos na taça? Nananinanão, meu caro leitor! Depois das rodadas de pontos corridos, ainda temos a Global Playoff Week e a Grande Final.
+
+                E ser o líder garante alguma vantagem? Sim! O Top 1 vai direto pras semifinais.
+                Já os times do 2º ao 7º lugar disputam as quartas de final. Ou seja: qualquer um entre os sete melhores pode surpreender e sair campeão!
+            </p>
+
+            <img src="imagens/Kings League Brazil_files/N-trofeo-kl-1-1.jpg" alt="trofeu">
+
+            <p>
+                Uma coisa é certa: apenas dois times vão pisar nos gramados da Allianz Parque no dia 18 de maio de 2025. E você pode estar lá para testemunhar ao vivo quem vai levantar a taça e se tornar o Rei dos Reis.
+                Não fique fora dessa! Mostre que você é um fã da Kings League Brazil e garanta seu acesso antecipado para comprar os ingressos pra nossa grande final
+            </p>
+
+            <h2>Descubra o formato da Kings World Cup Clubs 2025 da França</h2>
+
+            <img src="imagens/Kings League Brazil_files/N-gerard-bandera-kwcc-2024-mex-1.jpg" alt="gerrard pique">
+
+            <p>
+                A Kings está pronta para fazer história novamente. A Kings World Cup Clubs 2025, que acontecerá na França, promete ser um dos eventos mais aguardados do ano. Com 32 equipes competindo pelo título atualmente detido pelo Porcinos FC, o torneio promete fortes emoções e momentos inesquecíveis
+            <p>
+            
+            <h2>32 equipes, um único campeão</h2>
+
+            <img src="imagens/Kings League Brazil_files/N-chaveamento.png" alt="chaveamento">
+
+            <p>
+                A composição do torneio já está quase fechada, aguardando as últimas equipes que garantirão seu lugar por meio das diversas ligas e convites Wildcard.
+                À lista de equipes participantes se juntam três novas franquias Wildcard: La Capital CF, liderado por Lamine Yamal; Miami 7, apoiado por Jake Paul e Adrin Ross; e Kunisports, que disputará sua última competição na Europa antes de sua mudança para a Kings League Americas.
+                Assim fica a distribuição:
+            </p>
+
+            <ul>
+                <li>Espanha: 5 equipes (incluindo o atual campeão, Porcinos FC, e Jijantes FC, vencedor do Split 4 da Kings League Spain)</li>
+
+                <li>Américas: 4 equipes (entre elas, Olimpo United, vencedor do Split 2 da Kings League Américas)</li>
+
+                <li>Brasil, França e Itália: 4 equipes cada</li>
+
+                <li>Alemanha: 2 equipes</li>
+
+                <li>Wildcards: 9 equipes (entre elas, Ultra Chmicha, La Capital CF, Miami 7 e Kunisports)</li>
+            </ul>
+
+        </section>
     </main>
+    <hr>
     <footer>
         <br>
             <a href="#" id="i1"><img src="imagens/Kings League Brazil_files/logo-adidas.png" alt="adidas"></a>
