--- a/noticias.html
+++ b/noticias.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/noticias.css">
+    <link rel="stylesheet" href="estilos/retrato(noticias).css" media="screen and (orientation: portrait)">>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Kings League</title>
 </head>
